mastodon/network-policy-mastodon-allow-egress-opensearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mastodon-allow-egress-opensearch
  namespace: mastodon
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opensearch
      ports:
        - protocol: TCP
          port: 9200
